# ai_video_summarizer

./: .env.default  .gitignore  README.md  config.py  main.py  pyproject.toml
proccesings/: ai_proccessing.py  video_proccessing.py  whisperx_proccessing.py
